# pxt

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3af5a19a14c9_add_exit_policy_to_backtest.py  7a1f7c8c5357_seed_ma_crossover.py  86894cd676cb_seed_pivot_supertrend.py  b2c4e6f8a0d1_add_backtest_progress.py  b3c4d5e6f7a8_seed_chan_bi_fractal_mvp.py  c3d5e7f9b1a2_seed_adaptive_turtle.py  c4d5e6f7a9b0_update_chan_bi_zhongshu_meta.py  d4e5f7a9c0b2_backtest_presets_table.py  d5e6f7a8b9c1_chan_sell_zd_default_false.py  e47ea07f0ffe_initial_schema.py  p7q8r9s0t1u2_user_profile.py  (+19 more)
backend/scripts/: compare_ha_month_lookback.py  delete_failed_backtests.py  prefetch_universe_data.py  verify_crcl_sec.py
backend/tests/: conftest.py  test_adaptive_turtle_atr.py  test_api.py  test_auth_api.py  test_backtest_duration.py  test_backtest_engine.py  test_backtest_position_pct_engine.py  test_backtest_stale_reaper.py  test_backtest_thread_runner.py  test_backtests_ohlc.py  test_bars_merge.py  test_benchmark_metrics.py  test_chan_bi_fractal_mvp.py  test_chan_mvp_params.py  test_chan_structure.py  test_equity_session_calendar_date.py  test_exit_policy_engine.py  test_exit_policy_model.py  test_ha_backtest_mon_fri.py  test_ha_band_confidence.py  test_ha_cache_calendar.py  test_ha_cache_incremental.py  test_ha_cache_month_incremental.py  test_ha_ohlc_fundamentals.py  test_ha_week_anchor.py  test_heikin_ashi.py  test_indicators.py  test_intraday_limits.py  test_ma_crossover.py  test_manual_position_fill.py  test_models.py  test_pivot_supertrend.py  test_position_sizing.py  test_positions.py  test_repository.py  test_run_schedule.py  test_scheduler_job_groups.py  test_signal_processor.py  test_snapshot_bars.py  test_strategies_api.py  (+4 more)
(+146 files in other folders)
