[project]
name = "pxt-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30",
    "alembic>=1.14,<2.0",
    "pydantic-settings>=2.6,<3.0",
    "apscheduler>=3.10,<4.0",
    "pandas-ta>=0.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2",
    "schwab-py>=1.4",
    "anthropic>=0.40",
    "openai>=1.56",
    "httpx>=0.28",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
